--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://huangno1.github.io/"
+baseURL = "https://huangno1.github.io/"
 languageCode = "zh-tw"
 title = "Rem Blog"
 # theme = "AllinOne"
