--- a/data/series.toml
+++ b/data/series.toml
@@ -1,9 +1,9 @@
 [[series]]
 name = "Linux"
-img = "images/series/Linux/Linux.png"
+img = "static/images/series/Linux/Linux.png"
 summary = "Technical articles related to linux."
 
 [[series]]
 name = "C/C++"
-img = "images/series/C_C++/C++&C.png"
+img = "static/images/series/C_C++/C++&C.png"
 summary = "Technical articles related to C/C++."
