test to change series' photo

--- a/data/series.toml
+++ b/data/series.toml
@@ -1,6 +1,6 @@
 [[series]]
 name = "Linux"
-img = "images/series/Linux/Linux.png"
+img = "images/series/Linux/Linux.jpg"
 summary = "Technical articles related to linux."
 
 [[series]]
