--- a/data/series.toml
+++ b/data/series.toml
@@ -1,9 +1,11 @@
-[[series]]
-name = "Linux"
-img = "images/series/Linux/Linux.jpg"
-summary = "Technical articles related to linux."
+
 
 [[series]]
-name = "C/C++"
+name = "linux"
+img = "images/series/Linux/Linux.png"
+summary = "This is the place I write reviews"
+
+[[series]]
+name = "c/c++"
 img = "images/series/C_C++/C++&C.png"
-summary = "Technical articles related to C/C++."
+summary = "How I build up my personal website"
