--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,8 @@ Paginate                   = 3
 
 pygmentsuseclasses         = true
 
+# disqus
+disqusShortname = "remblog"
 
 [permalinks]
   blog                     = "blog/:year-:month/:slug/"
