--- a/data/series.toml
+++ b/data/series.toml
@@ -12,5 +12,5 @@ summary = "Here is a series of articles about C and C++"
 
 [[series]]
 name = "電影賞析"
-img = "images/series/MovieExperience/moive.jpg"
+img = "images/series/MovieExperience/moive.png"
 summary = "Here is a series of articles about my experience of the movie which I have watched."
