--- a/data/series.toml
+++ b/data/series.toml
@@ -5,12 +5,14 @@ name = "linux"
 img = "images/series/Linux/Linux.png"
 summary = "Here is a series of articles about linux"
 
-[[series]]
-name = "c/c++"
-img = "images/series/C_C++/C++&C.png"
-summary = "Here is a series of articles about C and C++"
 
 [[series]]
-name = "電影賞析"
-img = "images/series/MovieExperience/moive.png"
+name = "c/c++"
+img = "images/series/C_C++/C++_C.png"
+summary = "Here is a series of articles about C and C++"
+
+
+[[series]]
+name = "movies"
+img = "images/series/Movie/Moive.png"
 summary = "Here is a series of articles about my experience of the movie which I have watched."
