--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ enableEmoji = true
     pre = "<i class='fab fa-github fa-fw'></i>"
     post = ""
     name = ""
-    url = "https://github.com/dillonzq/LoveIt"
+    url = "https://github.com/HuangNO1"
     title = "GitHub"
     weight = 5
     
