--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ enableEmoji = true
 [author]
   name = "Huang Po-Hsun"
   email = "fh831.cp9gw@gmail.com"
-  link = "https://github.com/HuangNO1"
+  link = "https://huangno1.github.io"
   
 
 [menu]
